crates/xifty-cli/tests/snapshots/cli_contract__extract_happy_gif_report.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"happy.gif\", ViewMode::Report)"
---
{
  "input": {
    "container": "gif",
    "detected_format": "gif",
    "path": "happy.gif"
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
